Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P0: Blocker
-
Resolution: Done
-
Affects Version/s: 5.2.0 RC1, 5.2.0
-
Fix Version/s: 5.2.0
-
Component/s: Build System, Packaging & Installer
-
Labels:None
-
Platform/s:
Description
Gives a very bad first impression when operning up Creator for the first time.
CompileC simplematerial.build/Debug-iphoneos/simplematerial.build/Objects-normal/armv7/qrc_simplematerial.o qrc_simplematerial.cpp normal armv7 c++ com.apple.compilers.llvm.clang.1_0.compiler cd /Users/torarne/install/qt/5.2.0-final-testing/5.2.0/clang_64/temp Compiling dependencies /Users/torarne/install/qt/5.2.0-final-testing/5.2.0/clang_64/temp/qrc_simplematerial.cpp:9:10: fatal error: 'QtCore/qglobal.h' file not found #include <QtCore/qglobal.h> ^ 1 error generated. CompileC simplematerial.build/Debug-iphoneos/simplematerial.build/Objects-normal/armv7/simplematerial_qml_plugin_import.o simplematerial_qml_plugin_import.cpp normal armv7 c++ com.apple.compilers.llvm.clang.1_0.compiler cd /Users/torarne/install/qt/5.2.0-final-testing/5.2.0/clang_64/temp Compiling dependencies /Users/torarne/install/qt/5.2.0-final-testing/5.2.0/clang_64/temp/simplematerial_qml_plugin_import.cpp:3:10: fatal error: 'QtPlugin' file not found #include <QtPlugin> ^ 1 error generated. CompileC simplematerial.build/Debug-iphoneos/simplematerial.build/Objects-normal/armv7/simplematerial.o simplematerial.cpp normal armv7 c++ com.apple.compilers.llvm.clang.1_0.compiler cd /Users/torarne/install/qt/5.2.0-final-testing/5.2.0/clang_64/temp Compiling dependencies /Users/torarne/install/qt/5.2.0-final-testing/5.2.0/clang_64/temp/simplematerial.cpp:42:10: fatal error: 'qguiapplication.h' file not found #include <qguiapplication.h> ^ 1 error generated.
None of the normal -I flags are present it seems.
No magic qmake files that should mess things up:
[whopper:~/install/qt] $ find | grep "\.qmake"
./5.2.0-final-testing/5.2.0/clang_64/temp/.qmake.stash
Yet, any project within /5.2.0-final-testing/5.2.0/clang_64 fails. It's using /5.2.0-final-testing/5.2.0/ios/bin/qmake
Projects under /5.2.0-final-testing/5.2.0/ios work fine.
Attachments
Issue Links
- is required for
-
QTBUG-35145 Issues to be fixed before Qt5.2 final release
-
- Closed
-
- relates to
-
QTBUG-35529 Examples and documentation should be moved to separate installer component
-
- Closed
-